fix(token-timer): Adjusted width and position to prevent overlap issues

--- a/Disparonote Frontend/my-next-app/app/components/TokenTimer/TokenTimer.css
+++ b/Disparonote Frontend/my-next-app/app/components/TokenTimer/TokenTimer.css
@@ -1,7 +1,8 @@
 .token-timer-container {
   position: fixed;
   top: 15px;
-  right: 20px;
+  width: 170px;
+  right: 10px; 
   padding: 10px 15px;
   background-color: #000000;
   color: white;
